// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sending Domain reducer clear sending domain 1`] = `
Object {
  "domain": Object {
    "dkim": Object {},
    "status": Object {},
  },
  "getError": null,
  "getLoading": false,
}
`;

exports[`Sending Domain reducer update domain 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": true,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "updateLoading": false,
}
`;

exports[`Sending Domain reducer update domain fail 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "updateError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "updateLoading": false,
}
`;

exports[`Sending Domain reducer update pending 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "updateError": null,
  "updateLoading": true,
}
`;

exports[`Sending Domain reducer verify cname 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": "valid",
      "ownership_verified": 1,
    },
  },
  "verifyCnameLoading": false,
}
`;

exports[`Sending Domain reducer verify cname fail 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "verifyCnameError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "verifyCnameLoading": false,
}
`;

exports[`Sending Domain reducer verify cname pending 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "verifyCnameError": null,
  "verifyCnameLoading": true,
}
`;

exports[`Sending Domain reducer verify dkim 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "dkim_status": "valid",
      "ownership_verified": 1,
    },
  },
  "verifyDkimLoading": false,
}
`;

exports[`Sending Domain reducer verify dkim fail 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "verifyDkimError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "verifyDkimLoading": false,
}
`;

exports[`Sending Domain reducer verify dkim pending 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "verifyDkimError": null,
  "verifyDkimLoading": true,
}
`;

exports[`Sending Domain reducer verify with abuse 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "abuse_at_status": "valid",
    },
  },
  "verifyEmailLoading": false,
}
`;

exports[`Sending Domain reducer verify with abuse fail 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "verifyEmailError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "verifyEmailLoading": false,
}
`;

exports[`Sending Domain reducer verify with abuse pending 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "verifyEmailError": null,
  "verifyEmailLoading": true,
}
`;

exports[`Sending Domain reducer verify with mailbox 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "verification_mailbox_status": "valid",
    },
  },
  "verifyEmailLoading": false,
}
`;

exports[`Sending Domain reducer verify with mailbox fail 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "verifyEmailError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "verifyEmailLoading": false,
}
`;

exports[`Sending Domain reducer verify with mailbox pending 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "verifyEmailError": null,
  "verifyEmailLoading": true,
}
`;

exports[`Sending Domain reducer verify with postmaster 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "postmaster_at_status": "valid",
    },
  },
  "verifyEmailLoading": false,
}
`;

exports[`Sending Domain reducer verify with postmaster fail 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "verifyEmailError": Object {
    "errors": Array [
      Object {
        "message": "Some error occurred",
      },
    ],
  },
  "verifyEmailLoading": false,
}
`;

exports[`Sending Domain reducer verify with postmaster pending 1`] = `
Object {
  "domain": Object {
    "is_default_bounce_domain": false,
    "status": Object {
      "cname_status": null,
      "mx_status": null,
      "ownership_verified": 1,
    },
  },
  "verifyEmailError": null,
  "verifyEmailLoading": true,
}
`;
